[gd_scene load_steps=2 format=3 uid="uid://d2s7e18aseul7"]

[ext_resource type="Script" uid="uid://bvj8cbi1p8rg4" path="res://scenes/component/hurtbox_component/hurtbox_component.gd" id="1_jo7ey"]

[node name="HurtboxComponent" type="Area2D"]
script = ExtResource("1_jo7ey")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
